# murder

./: .gitignore  BRANDING.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  WAKEUP.md  hatch_build.py  pyproject.toml
.codex-handoff/: service-worker-bus-handoff.md  service-worker-bus-plan.md
.github/workflows/: ci.yml  release.yml
.murder/plans/: newui-finalpush.md  newui-inktui.md  newui-service.md
LICENSES/: NOTICE.md
inktui/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
inktui/fixtures/: crowsPanelFixture.ts  print-pane-fixture.ts  registry.tsx  render-pane-fixture.ts  renderInkFixture.tsx  ticketsPanelFixture.ts  types.ts
inktui/src/: index.tsx  theme.ts
inktui/stubs/: react-devtools-core.js
inktui/test/: App.test.tsx  README.md  index.test.tsx  inkTestColorOn.ts
inktui/tools/: probe.tsx
murder/: __init__.py  __main__.py  bus.py  cli.py  config.py  config_flow.py  conversation.py  db.py  escalations.py  notes.py  notes_sync.py  notetaker_capture.py  notetaker_context_sync.py  orchestrator.py  recovery.py  runtime.py  session_names.py  supervisor.py  tmux.py  usage_sample_command.py  user_config.py
murder/agents/: __init__.py  augur.py  base.py  collaborator.py  crow.py  crow_handler.py  events.py  monkey.py  notetaker.py  planning_agent.py  planning_handler.py  runner.py  sentinel.py  sessions.py
murder/bus/: __init__.py  broker.py  client.py  protocol.py  transport.py  transport_socket.py  transport_tcp.py
murder/cli/: __init__.py  doctor_cmd.py  init_cmd.py  service_cmd.py  tui_cmd.py
murder/clients/: __init__.py  anthropic.py  auto_free.py  base.py  cerebras.py  chat_completions.py  groq.py  openai_compatible.py  openrouter.py
murder/codebase_map/: __init__.py  build.py  render.py  rollup.py  store.py  summarize.py  tokens.py
murder/completion/: __init__.py  coordinator.py  persistence.py  policy.py  registry.py
murder/contracts/: __init__.py  common.py
murder/enforcement/: __init__.py  checklist_verify.py  git_diff.py  watcher.py
murder/escalations/: model.py  service.py  views.py
murder/facts/: __init__.py  contracts.py  log.py
murder/harnesses/: __init__.py  antigravity.py  base.py  capabilities.py  claude_code.py  codex.py  cursor.py  cursor_usage.py  model_discovery.py  models.py  murder_native.py  native_coding_crow.py  parsing.py  pi.py  pi_harness.py  transcripts.py  usage.py  usage_sampling.py  version_probe.py
murder/llm/: __init__.py  backends.py  direct.py  execution.py  oracle.py  policy.py
murder/notes/: __init__.py  sync.py
murder/observability/: __init__.py  advanced_log.py  log_context.py  logging_setup.py
murder/orchestration/: brief.py  orchestrator.py  outcome.py  validator.py
murder/permissions/: __init__.py  contracts.py  enforcement.py  harness.py  persistence.py  policy.py  service.py  session.py
murder/persistence/: agents.py  commands.py  escalations.py  event_log.py  migrations.py  notes.py  plans.py  records.py  schema.py  tickets.py  usage.py
murder/plans/: __init__.py  parser.py  schema.py  sync.py
murder/policy/: scheduler_policy.py
murder/prompts/: __init__.py  augur.md  collaborator.md  crow_claude_code.md  crow_codex.md  crow_cursor.md  crow_handler.md  crow_pi.md  monkey_claude_code.md  monkey_codex.md  monkey_cursor.md  monkey_pi.md  notetaker.md  planner.md  sentinel.md
murder/resources/: __init__.py
murder/roster/: __init__.py  repository.py  service.py
murder/runtime/: activity_dispatcher.py  activity_executor.py  admission.py  cron.py  trigger_dispatcher.py
murder/scheduler/: __init__.py  decisionf.py  worker.py
murder/service/: agent_registry.py  bootstrap.py  client_api.py  command_dispatch.py  document_access.py  filesystem_sync.py  host.py  read_model.py  recovery.py  runtime.py  runtime_lifecycle.py  runtime_scope.py  schedule_snapshot.py  settings_service.py  supervisor.py  view_models.py
murder/state/: __init__.py
murder/storage/: __init__.py  filesystem.py  markdown_sync.py  paths.py  run_id_allocation.py  worktrees.py
murder/templates/: __init__.py  env.example  gitignore  roles.yaml
murder/terminal/: session_names.py  tmux.py
murder/tickets/: __init__.py  carve.py  checklist.py  lifecycle.py  meta_sync.py  metadata_sidecar_sync.py  parser.py  schema.py  sidecar.py  sidecar_sync.py  sync.py  waves.py
murder/tui/: agent_grid.py  app.py  chat_input.py  chat_target_cycle.py  client.py  crow_health.py  crows_view.py  escalation_resolve_wizard.py  escalation_strip.py  header.py  note_capture.py  pane_mirror.py  perf_log.py  plan_view.py  planning_mode_widgets.py  schedule_view.py  settings_screen.py  spawn_wizard.py  themes.py  ticket_grid.py
murder/verdict/: __init__.py
murder/web/: __init__.py  bridge.py
murder/work/: __init__.py  attribution.py  duration.py  examples.py  routing.py  simple_doc_sync.py
murder/workers/: __init__.py  base.py  collaborator_worker.py  done_session_sweeper.py  harness_version_probe_worker.py  orchestrator_worker.py  process_runner.py  process_targets.py  state_worker.py  sync_workers.py  thread_runner.py  usage_probe_worker.py
murder_newstructure/: __init__.py
murder_newstructure/agents/: __init__.py  base.py  collaborator.py  crow.py  crow_handler.py  runner.py  sentinel.py  sessions.py
murder_newstructure/bus/: broker.py  client.py  protocol.py  transport_socket.py  transport_tcp.py
murder_newstructure/cli/: init_cmd.py  tui_cmd.py
murder_newstructure/clients/: openrouter.py
murder_newstructure/enforcement/: __init__.py  git_diff.py  watcher.py
murder_newstructure/escalations/: __init__.py  service.py  views.py
tests/: README.md  __init__.py  conftest.py  test_advanced_log.py  test_advanced_log_boundaries.py  test_advanced_log_instrumentation.py  test_advanced_log_seams.py  test_advanced_log_wave4_agents.py
tools/: __init__.py  generate_application_protocol.py  harness_probe.py  tmux.md  ui_hydration_probe.py
webui/: README.md  STYLING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+2667 files in other folders)
