[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "murder"
version = "0.0.1"
description = "Agentic dev harness — a murder of crows supervising a monkey."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Luke Ask", email = "lukeask@gmail.com" }]
dependencies = [
    "pydantic>=2.6,<3.0",
    "typer>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "anyio>=4.3,<5.0",
    "watchfiles>=0.21,<2.0",  # cross-platform inotify-ish watcher (D5)
    # TODO(M0): tiktoken for D17 if/when context-cap enforcement lands
]

[project.optional-dependencies]
# The web/mobile bridge (`murder web`) — aiohttp serves the React frontend and
# relays a WebSocket to the unix bus. Optional so the core CLI/TUI install stays
# slim; `murder web` raises a friendly error pointing here when it's absent.
web = ["aiohttp>=3.9,<4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "aiohttp>=3.14.1",
]

[project.scripts]
# Bare `murder` is the kickoff command per D8.
murder = "murder.app.cli:app"

[tool.hatch.build]
include = [
    "murder/llm/prompts/*.md",
    "murder/resources/templates/*",
]

# Bundles the Ink TUI into the wheel (esbuild → murder/_inktui/index.js). Picks up hatch_build.py.
[tool.hatch.build.hooks.custom]

# The sdist must carry the bundle's *inputs* (inktui source + lockfile + stubs + the hook), because
# `python -m build` builds the wheel from the sdist — the hook runs `npm run bundle` in `inktui/`
# there. dist/ and node_modules are excluded so we ship source only.
[tool.hatch.build.targets.sdist]
include = [
    "murder/",
    "tests/",
    "inktui/src/",
    "inktui/stubs/",
    "inktui/package.json",
    "inktui/package-lock.json",
    "inktui/tsconfig.json",
    "inktui/biome.json",
    # Web frontend source: enough to rebuild webui/dist in CI. The web build imports the portable
    # core from ../inktui/src via the `@core` alias, so inktui/src above is also required here.
    "webui/src/",
    "webui/index.html",
    "webui/package.json",
    "webui/package-lock.json",
    "webui/vite.config.ts",
    "webui/tsconfig.json",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
]
exclude = [
    "inktui/node_modules/",
    "inktui/dist/",
    "webui/node_modules/",
    "webui/dist/",
]

[tool.hatch.build.targets.wheel]
packages = ["murder"]
# Both front-ends are generated + gitignored; the hook force-includes them, and these keep them in
# the wheel even though they are not tracked by VCS.
artifacts = [
    "murder/_inktui/*",
    "murder/_webui/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# TODO(M0): tighten lints once code lands
select = ["E", "F", "I", "B", "UP", "PL"]
ignore = ["PLR0913"]  # allow many args on dataclasses / pydantic models

[tool.mypy]
python_version = "3.10"
strict = true
# TODO(M0): re-enable disallow_untyped_decorators once Textual stubs settle
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# `auto` so an un-marked `async def test_...` actually runs instead of being
# collected and silently passing without execution. Tests using the explicit
# `@pytest.mark.asyncio` marker continue to work unchanged.
asyncio_mode = "auto"
markers = [
    "smoke: real cursor/CC/API; requires MURDER_MANUAL_SMOKE=1",
    "integration: needs a live tmux server",
    "slow: slow test (real subprocess/git); deselect with -m 'not slow'",
    "live: needs live vendor CLIs/network; gated behind an env var",
    "quarantine: known-flaky; excluded from the default run",
]
